feat(category): add alias
