# docs/swagger.json
@@ -543,9 +543,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Property category ID",
-                        "name": "category_id",
+                        "type": "string",
+                        "description": "Property category alias",
+                        "name": "category_alias",
                         "in": "formData",
                         "required": true
                     },
@@ -725,7 +725,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.PostersResponse"
+                            "$ref": "#/definitions/dto.PostersResponse"
                         }
                     },
                     "400": {
@@ -775,68 +775,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.PosterResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/posters/metro-stations": {
-            "get": {
-                "description": "Returns the metro stations",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "posters"
-                ],
-                "summary": "Get metro stations by geo",
-                "parameters": [
-                    {
-                        "type": "number",
-                        "format": "float32",
-                        "description": "lat",
-                        "name": "lat",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "number",
-                        "format": "float32",
-                        "description": "lon",
-                        "name": "lon",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.MetroResponse"
                         }
                     },
                     "400": {
@@ -1078,6 +1016,17 @@
                 }
             }
         },
+        "dto.CategoryDTO": {
+            "type": "object",
+            "properties": {
+                "alias": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreatedPoster": {
             "type": "object",
             "properties": {
@@ -1144,17 +1093,6 @@
         },
         "dto.HouseDTO": {
             "type": "object"
-        },
-        "dto.MetroStationDTO": {
-            "type": "object",
-            "properties": {
-                "station_geo": {
-                    "$ref": "#/definitions/dto.GeographyDTO"
-                },
-                "station_name": {
-                    "type": "string"
-                }
-            }
         },
         "dto.OAuthCodeFlow": {
             "type": "object",
@@ -1229,7 +1167,7 @@
                     "$ref": "#/definitions/dto.GeographyDTO"
                 },
                 "category": {
-                    "type": "string"
+                    "$ref": "#/definitions/dto.CategoryDTO"
                 },
                 "city": {
                     "type": "string"
@@ -1295,6 +1233,20 @@
                 },
                 "phone": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.PostersResponse": {
+            "type": "object",
+            "properties": {
+                "len": {
+                    "type": "integer"
+                },
+                "posters": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.PosterCardDTO"
+                    }
                 }
             }
         },
@@ -1444,39 +1396,11 @@
                 }
             }
         },
-        "response.MetroResponse": {
-            "type": "object",
-            "properties": {
-                "len": {
-                    "type": "integer"
-                },
-                "metro_stations": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.MetroStationDTO"
-                    }
-                }
-            }
-        },
         "response.PosterResponse": {
             "type": "object",
             "properties": {
                 "poster": {
                     "$ref": "#/definitions/dto.PosterDTO"
-                }
-            }
-        },
-        "response.PostersResponse": {
-            "type": "object",
-            "properties": {
-                "len": {
-                    "type": "integer"
-                },
-                "posters": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.PosterCardDTO"
-                    }
                 }
             }
         },
